# challenge-de-ingestion

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.backend.txt  requirements.in  requirements.txt
app/backend/: .dockerignore  Dockerfile  README.md  app.py  main.py  requirements.txt
app/backend/assets/: config.py  tables.py  tables_ddl.py
app/backend/db/: prod.db
app/backend/functions/: README.md  automated_etl.py  ingest.py  load.py  lookup.py
app/backend/lib/: database.py  exceptions.py
app/backend/reports/: README.md  employees_by_quarter.py  hirings_by_department.py
app/backend/utils/: database.py  read_env.py  singletons.py
app/frontend/: main.py
docker/: back.Dockerfile  back.dockerignore  front.Dockerfile  front.dockerignore
tests/backend/: test_database.py  test_ingestion.py  test_load.py  test_lookup.py
tests/functional/: test_reports.py
